modificações de alinhamento

--- a/lca/index.html
+++ b/lca/index.html
@@ -130,8 +130,8 @@
                 </div>
               </div>
             </div>
-        <div class="container-conteudo">
-          <div class="servicos-oferecidos">
+        <div class="container-conteudo container-foto">
+          <div class="servicos-oferecidos servicos-oferecidos-foto">
           <div class="fotos">
             <div class="texto">
               <h2 class="foto">Fotografia</h2>
