ajuste de tamanho para telas 414 x 736

--- a/lca/index.html
+++ b/lca/index.html
@@ -38,7 +38,7 @@
           </ul>
             <div class="texto-banner">
               <h1 class="titulo">LCA Fotografia e Social Media</h1>
-              <p class="descricao">Fotográfias de gastronomia, retratos e eventos.</p>
+              <p class="descricao">Fotografias de gastronomia, retratos e eventos.</p>
               <p class="descricao">Mentoria e gerenciamento de mídias sociais.</p>
               <h3>Job de qualidade? <span class="slogan">#LCAFAZ</span></h3>
             </div>
@@ -161,7 +161,7 @@
                   <div class="card-body">
                     <h5 class="card-title bronze">Ensaio Fotográfico</h5>
                     <ul class="lista-foto">
-                      <li>15 Fotos</li>
+                      <li>15 Fotos tratadas</li>
                       <li>1H30M</li>
                     </ul>
                     <p class="bronze valor">R$ 100,00</p>
@@ -212,12 +212,14 @@
                         <h3 class="ola">Olá, eu sou a Laura.</h3>
                         <p class="resumo">
                             Sou responsável pela <span class="nome-empresa">LCA Fotografia e Social Media</span>.
-                            Desde de criança sempre fui fascinada pela poesia de fotografar: gravar momentos a partir 
-                            dos meus olhos para recordação ou até mostrar para outras pessoas. Portanto, decidi virar fotógrafa.
-                            Como sempre fui muito comunicativa também decidi atuar com social media e ajudar pessoas e empresas 
-                            a alavancarem suas marcas através de mentoria e conteúdo de qualidade. Me acompanhe nas redes sociais ou entre em contato.
+                            Desde criança sempre fui apaixonada pela arte de fotografar e gravar momentos a partir dos meus olhos. 
+                            Me tornar uma fotógrafa profissional foi consequência. Depois de estudar a área de social media, 
+                            percebi uma nova carreira complementar à fotografia e me formei uma criadora de conteúdo completa. 
+                            E estarei eternamente em uma jornada de estudo e desenvolvimento. Minha função é ajudar as pessoas e empresas a 
+                            alavancarem suas marcas pessoais e profissionais através de fotos, mentoria e criação de conteúdo de qualidade. 
+                            
                         </p>
-                        <p class="resumo redes">Me acompanhe nas redes socias:</p>
+                        <p class="resumo redes">Me acompanhe nas redes sociais ou entre em contato.</p>
                         <a href="https://www.instagram.com/lcafotoemedia/?hl=pt-br" target="_blank">
                             <img class="medias icone-um" src="./assets/instagram.svg" alt="Link para o Instagram">
                         </a>
