Ajustes para SEO

--- a/lca/photo-jobs.html
+++ b/lca/photo-jobs.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Serviços - Fotografia</title>
 
+    <!-- Facilitar o compartilhamento em redes sociais-->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Agência LCA - Serviços - Fotografia">
+    <meta property="og:description" content="A Agência LCA possui diversos serviços de fotografia. 
+    Fazemos cobertura de eventos, fotos de produtos ou ensaios. Entre em contato!">
+    <meta property="og:url" content="http://agencialca.com/photo-jobs.html">
+    <meta property="og:image" content="http://agencialca.com/assets/og-image.png">
+
     <link rel="shortcut icon" href="./assets/camera.svg" />
 
     <link rel="stylesheet" href="./style/photo-jobs.css">
