--- a/lca/social-media-jobs.html
+++ b/lca/social-media-jobs.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Serviços - Social Media</title>
 
+    <!-- Facilitar o compartilhamento em redes sociais-->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Agência LCA - Serviços - Social Media>
+    <meta property="og:description" content="A Agência LCA possui diversos pacotes para você decolar nas suas mídias socias. Entre em contato!">
+    <meta property="og:url" content="http://agencialca.com/social-media-jobs.html">
+    <meta property="og:image" content="http://agencialca.com/assets/og-image.png">
+
     <link rel="shortcut icon" href="./assets/camera.svg" />
 
     <link rel="stylesheet" href="./style/social-media-jobs.css">
@@ -39,7 +46,7 @@
       </div>
 
       <div class="imagem-banner">
-        <img src="./assets/social-media-jobs.svg" alt="">
+        <img src="./assets/social-media-jobs.svg" alt="Imagem de uma garota e alguns ícones de redes sociais, representando uma social media.">
       </div>
     </div>
 
