ajustes de responsividade no mobile

--- a/lca/index.html
+++ b/lca/index.html
@@ -4,16 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Agência LCA - Fotografia e Social Media</title>
-    <meta name="description" content="A Agência LCA possui diversos serviços de fotografia. 
-    Também cuidamos das suas redes sociais por meio de nossos pacotes de social media." />
+    <meta
+      name="description"
+      content="A Agência LCA possui diversos serviços de fotografia. 
+    Também cuidamos das suas redes sociais por meio de nossos pacotes de social media."
+    />
 
     <!-- Facilitar o compartilhamento em redes sociais-->
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Agência LCA - Fotografia e Social Media">
-    <meta property="og:description" content="A Agência LCA possui diversos serviços de fotografia. 
-    Também cuidamos das suas redes sociais por meio de nossos pacotes de social media.">
-    <meta property="og:url" content="http://agencialca.com/">
-    <meta property="og:image" content="http://agencialca.com/assets/og-image.png">
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Agência LCA - Fotografia e Social Media"
+    />
+    <meta
+      property="og:description"
+      content="A Agência LCA possui diversos serviços de fotografia. 
+    Também cuidamos das suas redes sociais por meio de nossos pacotes de social media."
+    />
+    <meta property="og:url" content="http://agencialca.com/" />
+    <meta
+      property="og:image"
+      content="http://agencialca.com/assets/og-image.png"
+    />
 
     <link rel="shortcut icon" href="./assets/camera.svg" />
 
@@ -34,7 +46,7 @@
   <body>
     <section class="bg-header">
       <div class="banner-header">
-        <ul class="nav justify-content-end menu">
+        <ul class="nav menu">
           <li class="nav-item">
             <a class="nav-link" href="#">Início</a>
           </li>
@@ -66,7 +78,11 @@
       <h2 class="titulo-servicos">Serviços</h2>
       <div class="cards-servicos">
         <div class="card card-fotografia" style="width: 18rem">
-          <img src="./assets/camera.svg" class="card-img-top" alt="Icone de uma câmera." />
+          <img
+            src="./assets/camera.svg"
+            class="card-img-top"
+            alt="Icone de uma câmera."
+          />
           <div class="card-body">
             <h5 class="card-title">Fotografia</h5>
             <p class="card-text">
