adicionando páginas com serviços oferecidos + ajuste na responsividade

--- a/lca/index.html
+++ b/lca/index.html
@@ -27,7 +27,7 @@
       content="http://lausrainbow.com.br/assets/og-image.png"
     />
 
-    <link rel="shortcut icon" href="./assets/rainbow.png" />
+    <link rel="shortcut icon" href="./assets/short-icon.png" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -49,9 +49,11 @@
     </div>
     <div class="container">
       <img
+        class="banner-internet"
         src="./assets/first-banner.png"
         alt="Lau's Rainbow - Fotografia e Social Media"
       />
+      <img class="banner-mobile" src="./assets/banner-mobile.png" alt="Lau's Rainbow - Fotografia e Social Media">
       <nav>
         <ul class="navbar">
           <li><a href="#services" class="button">Serviços</a></li>
@@ -65,12 +67,12 @@
           <p>
             Quer alavancar o seu negócio nas mídias sociais, construir autoridade dentro do seu nicho e com isso captar mais clientes e vender seus produtos?
           </p>
-          <a class="call-to-action" href="#">Conheça nossos serviços</a>
+          <a class="call-to-action" href="./pages/photo.html">Saiba mais sobre os serviços</a>
         </div>
         <div class="illustrations">
           <img
           class=""
-            src="./assets/teste.png"
+            src="./assets/smartphone-social-media-icon.png"
             alt="Ilustração de uma mão segurando um celular"
           />
         </div>
@@ -81,7 +83,7 @@
         </div>
         <div class="paragraph-photo">
           <p>Quer fotos profissionais suas ou dos seus produtos, cobertura de eventos ou sempre quis fazer um ensaio fotográfico? Não perca tempo e conheça os serviços disponíveis!</p>
-          <a class="call-to-action" href="#">Conheça nossos serviços</a>
+          <a class="call-to-action" href="./pages/social-media.html">Saiba mais sobre os serviços</a>
         </div>
       </div>
     </section>
@@ -97,7 +99,7 @@
     </section>
     <section id="about-the-professional">
       <img src="./assets/profile-photo.png" alt="Laura, responsável pela Lau's Rainbow, uma menina de pele branca de cabelos curtos.">
-      <img class="profile-photo-mobile" src="./assets/profile-photo-mobile.png" alt="">
+      <img class="profile-photo-mobile" src="./assets/profile-photo-mobile.png" alt="Laura, responsável pela Lau's Rainbow, uma menina de pele branca de cabelos curtos.">
     </section>
     <footer>
       <p>© Todos os direitos reservados | Desenvolvido por Laura Oliveira</p>
