ajuste na altura do container dos serviços

--- a/lca/index.html
+++ b/lca/index.html
@@ -83,7 +83,7 @@
         </div>
         <div class="paragraph-photo">
           <p>Quer fotos profissionais suas ou dos seus produtos, cobertura de eventos ou sempre quis fazer um ensaio fotográfico? Não perca tempo e conheça os serviços disponíveis!</p>
-          <a class="call-to-action" href="./pages/social-media.html">Saiba mais sobre os serviços</a>
+          <a class="call-to-action call-to-action-mobile" href="./pages/social-media.html">Saiba mais sobre os serviços</a>
         </div>
       </div>
     </section>
