alteração das rotas dos botões

--- a/lca/index.html
+++ b/lca/index.html
@@ -67,7 +67,7 @@
           <p>
             Quer alavancar o seu negócio nas mídias sociais, construir autoridade dentro do seu nicho e com isso captar mais clientes e vender seus produtos?
           </p>
-          <a class="call-to-action" href="./pages/photo.html">Saiba mais sobre os serviços</a>
+          <a class="call-to-action" href="./pages/social-media.html">Saiba mais sobre os serviços</a>
         </div>
         <div class="illustrations">
           <img
@@ -83,7 +83,7 @@
         </div>
         <div class="paragraph-photo">
           <p>Quer fotos profissionais suas ou dos seus produtos, cobertura de eventos ou sempre quis fazer um ensaio fotográfico? Não perca tempo e conheça os serviços disponíveis!</p>
-          <a class="call-to-action call-to-action-mobile" href="./pages/social-media.html">Saiba mais sobre os serviços</a>
+          <a class="call-to-action call-to-action-mobile" href="./pages/photo.html">Saiba mais sobre os serviços</a>
         </div>
       </div>
     </section>
@@ -94,7 +94,7 @@
         <a href="https://www.instagram.com/lausrainbow/"><img src="./assets/instagram.png" alt="Clique aqui para ser direcionado para o instagram @lausrainbow."></a>
         <a href="https://www.linkedin.com/in/laura-costa-aquino-652840155/"><img src="./assets/linkedin.png" alt="Clique aqui para ser direcionado para o meu linkedin."></a>
         <a href="https://api.whatsapp.com/send?phone=5511959722413&text=Ol%C3%A1,%20gostaria%20de%20contratar%20um%20servi%C3%A7o%20ou%20tirar%20algumas%20d%C3%BAvidas?"><img src="./assets/whatsapp.png" alt="Clique aqui para falar comigo no whatsapp"></a>
-        <a href="#"><img src="./assets/gmail.png" alt="Clique aqui para me mandar um e-mail."></a>
+        <a href="mailto:lcafotoemedia@gmail.com"><img src="./assets/gmail.png" alt="Clique aqui para me mandar um e-mail."></a>
       </div>
     </section>
     <section id="about-the-professional">
