Ajuste na mensagem do whatsapp

--- a/lca/index.html
+++ b/lca/index.html
@@ -93,7 +93,7 @@
       <div class="social-media-links">
         <a href="https://www.instagram.com/lausrainbow/"><img src="./assets/instagram.png" alt="Clique aqui para ser direcionado para o instagram @lausrainbow."></a>
         <a href="https://www.linkedin.com/in/laura-costa-aquino-652840155/"><img src="./assets/linkedin.png" alt="Clique aqui para ser direcionado para o meu linkedin."></a>
-        <a href="https://api.whatsapp.com/send?phone=5511959722413&text=Ol%C3%A1,%20gostaria%20de%20contratar%20um%20servi%C3%A7o%20ou%20tirar%20algumas%20d%C3%BAvidas?"><img src="./assets/whatsapp.png" alt="Clique aqui para falar comigo no whatsapp"></a>
+        <a href="https://api.whatsapp.com/send?phone=5511959722413&text=Ol%C3%A1,%20gostaria%20de%20contratar%20um%20servi%C3%A7o%20e%20tirar%20algumas%20d%C3%BAvidas."><img src="./assets/whatsapp.png" alt="Clique aqui para falar comigo no whatsapp"></a>
         <a href="mailto:lcafotoemedia@gmail.com"><img src="./assets/gmail.png" alt="Clique aqui para me mandar um e-mail."></a>
       </div>
     </section>
