adição de título para os serviços + remoção de imagens

--- a/lca/index.html
+++ b/lca/index.html
@@ -62,28 +62,24 @@
         </ul>
       </nav>
     <section id="services">
+      <h2 class="title-of-services">Precisando de ajuda com as mídias sociais?</h2>
       <div class="separe-itens-social-media">
+
         <div class="paragraph">
           <p>
             Quer alavancar o seu negócio nas mídias sociais, construir autoridade dentro do seu nicho e com isso captar mais clientes e vender seus produtos?
           </p>
           <a class="call-to-action" href="./pages/social-media.html">Saiba mais sobre os serviços</a>
         </div>
-        <div class="illustrations">
-          <img
-          class=""
-            src="./assets/smartphone-social-media-icon.png"
-            alt="Ilustração de uma mão segurando um celular"
-          />
-        </div>
       </div>
-      <div class="separe-itens-photo">
-        <div class="illustrations">
-          <img class="icon" src="./assets/photo-img.png" alt="Ilustração de uma câmera fotográfica">
-        </div>
-        <div class="paragraph-photo">
-          <p>Quer fotos profissionais suas ou dos seus produtos, cobertura de eventos ou sempre quis fazer um ensaio fotográfico? Não perca tempo e conheça os serviços disponíveis!</p>
-          <a class="call-to-action call-to-action-mobile" href="./pages/photo.html">Saiba mais sobre os serviços</a>
+      <div class="bg-photo">
+        <h2 class="title-of-services title-photo">Confira todos os serviços relacionados a fotografia</h2>
+        <div class="separe-itens-photo">
+
+          <div class="paragraph-photo">
+            <p>Quer fotos profissionais suas ou dos seus produtos, cobertura de eventos ou sempre quis fazer um ensaio fotográfico? Não perca tempo e conheça os serviços disponíveis!</p>
+            <a class="call-to-action call-to-action-mobile" href="./pages/photo.html">Saiba mais sobre os serviços</a>
+          </div>
         </div>
       </div>
     </section>
