--- a/lca/pages/photo.html
+++ b/lca/pages/photo.html
@@ -43,7 +43,7 @@
             alt="Veja as informações sobre esse serviço:"
           />
           <p class="card-title">Ensaio completo</p>
-          <p class="card-description">10 fotos bem blogueirinhe</p>
+          <p class="card-description">10 fotos profissionais tratadas</p>
           <p class="card-description">R$ 80,00</p>
           <a
             class="redirect-to-whatsapp"
