--- a/lca/pages/social-media.html
+++ b/lca/pages/social-media.html
@@ -30,7 +30,7 @@
           />
           <p class="card-title">Pacote de conteúdo</p>
           <p class="card-description">Conteúdo para o mês todo</p>
-          <p class="card-description">e-bookinho</p>
+          <p class="card-description">e-book personalizado</p>
           <p class="card-description">R$ 300,00</p>
           <a
             class="redirect-to-whatsapp"
@@ -46,7 +46,7 @@
           />
           <p class="card-title">Mentoria</p>
           <p class="card-description">Estratégias para crescimento</p>
-          <p class="card-description">e-bookinho</p>
+          <p class="card-description">e-book personalizado</p>
           <p class="card-description">R$ 120,00</p>
           <a
             class="redirect-to-whatsapp"
